<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/bg_white_radius"
    android:padding="4dp">

    <TextView
        android:id="@+id/tv_item_no"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/tag_no"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_item_no"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_item_nama_proyek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/abeezee"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/col_nama_proyek" />

        <TextView
            android:id="@+id/tv_item_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/abeezee"
            android:maxLines="2"
            tools:text="@string/col_nama" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>